syntax = "proto2";

package budget;

// import "common_ui.proto";

option java_package = "com.digitald4.budget.proto";
option java_outer_classname = "BudgetProtos";

enum UserRole {
	UR_UNKNOWN = 0;
	UR_OWNER = 12;
	UR_READONLY = 13;
}

message Portfolio {
	optional int32 id = 1;
	optional string name = 2;

	message PortfolioUser {
		optional int32 portfolio_id = 2;
		optional int32 user_id = 3;
		optional UserRole role = 4;
	}
	repeated PortfolioUser portfolio_user = 4;
}

message Account {
  optional int32 id = 1;
  optional int32 portfolio_id = 2;
  optional string name = 3;
  optional bool payment_account = 4;
  optional int32 parent_account_id = 5;

	message Balance {
		optional string date = 1;
		optional double balance = 2;
		optional double balance_year_to_date = 3;
	}
	repeated Balance balance = 6;
}

message Bill {
	optional int32 id = 1;
  optional int32 portfolio_id = 2;
	optional int32 account_id = 3;
	optional int32 template_id = 4;
	optional int64 due_date = 5;
	optional double amount_due = 6;
	optional string name = 7;
	optional int64 payment_date = 8;

	enum PaymentStatus {
		PS_UNKNOWN = 0;
		PS_ESTIMATED_AMOUNT = 1;
		PS_BILLED_AMOUNT = 2;
		PS_SCHEDULED = 3;
		PS_PENDING = 4;
		PS_PAID = 5;
	}
	optional PaymentStatus status = 9;
	optional int32 rank = 10;
	optional bool active = 11;
	optional string description = 12;

	message Transaction {
		optional int32 debit_account_id = 1;
		optional double amount = 2;
		optional int64 payment_date = 3;
		optional PaymentStatus status = 4;
		optional bool active = 5;
	}
	repeated Transaction transaction = 13;
}

message Template {
  optional int32 id = 1;
  optional int32 portfolio_id = 2;
  optional string name = 3;

	message TemplateBill {
		optional int32 account_id = 1;
		optional int32 due_day = 2;
		optional string name = 3;
		optional double amount_due = 4;

		message TemplateTransaction {
			optional int32 debit_account_id = 1;
			optional double amount = 2;
		}
		repeated TemplateTransaction transaction = 5;
	}
  repeated TemplateBill bill = 4;
}